added validations for sort properties for findAll types of search
