# src/main/kotlin/com/kaiqkt/auth/application/web/controllers/AuthenticationController.kt
@@ -1,15 +1,14 @@
 package com.kaiqkt.auth.application.web.controllers
 
+import com.kaiqkt.auth.application.web.responses.toV1
 import com.kaiqkt.auth.domain.services.AuthenticationService
-import com.kaiqkt.auth.domain.utils.Constants
+import com.kaiqkt.auth.generated.application.web.controllers.IntrospectApi
 import com.kaiqkt.auth.generated.application.web.controllers.LoginApi
 import com.kaiqkt.auth.generated.application.web.controllers.RefreshApi
-import com.kaiqkt.auth.generated.application.web.controllers.VerifyApi
 import com.kaiqkt.auth.generated.application.web.dtos.AuthenticationResponseV1
+import com.kaiqkt.auth.generated.application.web.dtos.IntrospectRequestV1
+import com.kaiqkt.auth.generated.application.web.dtos.IntrospectResponseV1
 import com.kaiqkt.auth.generated.application.web.dtos.LoginRequestV1
-import com.kaiqkt.auth.generated.application.web.dtos.VerifiedSessionResponseV1
-import com.kaiqkt.kt.tools.security.utils.ContextUtils
-import org.springframework.http.HttpStatus
 import org.springframework.http.ResponseEntity
 import org.springframework.security.access.prepost.PreAuthorize
 import org.springframework.web.bind.annotation.RestController
@@ -17,11 +16,11 @@ import org.springframework.web.bind.annotation.RestController
 @RestController
 class AuthenticationController(
     private val authenticationService: AuthenticationService
-) : LoginApi, RefreshApi, VerifyApi {
+) : LoginApi, RefreshApi, IntrospectApi {
 
     override fun login(
-        loginRequestV1: LoginRequestV1,
-        xForwardedFor: String?
+        xForwardedFor: String,
+        loginRequestV1: LoginRequestV1
     ): ResponseEntity<AuthenticationResponseV1> {
         val authentication = authenticationService.authenticate(
             loginRequestV1.email,
@@ -38,8 +37,8 @@ class AuthenticationController(
     }
 
     override fun refresh(
-        xRefreshToken: String,
-        xForwardedFor: String?
+        xForwardedFor: String,
+        xRefreshToken: String
     ): ResponseEntity<AuthenticationResponseV1> {
         val authentication = authenticationService.refresh(xRefreshToken, xForwardedFor)
 
@@ -51,11 +50,11 @@ class AuthenticationController(
         )
     }
 
-    @PreAuthorize("hasRole('ROLE_USER')")
-    override fun verify(): ResponseEntity<Unit> {
-        val sessionId = ContextUtils.getValue(Constants.SESSION_ID, String::class.java)
-        authenticationService.verify(sessionId)
+    @PreAuthorize("hasRole('ROLE_API')")
+    override fun introspect(introspectRequestV1: IntrospectRequestV1): ResponseEntity<IntrospectResponseV1> {
+        val accessToken = introspectRequestV1.accessToken.substringAfter("Bearer")
+        val response = authenticationService.introspect(accessToken)
 
-        return ResponseEntity.noContent().build()
+        return ResponseEntity.ok(response.toV1())
     }
 }
