# src/main/resources/static/api-docs.yml
@@ -123,7 +123,7 @@ paths:
             default: "DESC"
           required: false
         - in: query
-          name: orderBy
+          name: order_by
           schema:
             type: string
             default: "createdAt"
@@ -158,7 +158,7 @@ paths:
           name: X-Forwarded-For
           schema:
             type: string
-          required: false
+          required: true
       requestBody:
         required: true
         content:
@@ -201,7 +201,7 @@ paths:
           name: X-Forwarded-For
           schema:
             type: string
-          required: false
+          required: true
         - in: header
           name: X-Refresh-Token
           schema:
@@ -226,17 +226,27 @@ paths:
             application/vnd.kaiqkt_auth_api_error_v1+json:
               schema:
                 $ref: '#/components/schemas/ErrorV1'
-  /verify:
+  /introspect:
     post:
       tags:
         - authentication
-      description: Verify session
-      operationId: verify
+      description: Introspect session
+      operationId: introspect
       security:
-        - JwtToken: [ ]
+        - ApiKey: [ ]
+      requestBody:
+        required: true
+        content:
+          application/vnd.kaiqkt_auth_api_auth_v1+json:
+            schema:
+              $ref: '#/components/schemas/IntrospectRequestV1'
       responses:
-        204:
-          description: Session verified
+        200:
+          description: Session verified successfully
+          content:
+            application/vnd.kaiqkt_auth_api_error_v1+json:
+              schema:
+                $ref: '#/components/schemas/IntrospectResponseV1'
         400:
           description: Invalid payload
           content:
@@ -272,7 +282,7 @@ paths:
             default: "DESC"
           required: false
         - in: query
-          name: orderBy
+          name: order_by
           schema:
             type: string
             default: "createdAt"
@@ -620,7 +630,7 @@ paths:
             default: "DESC"
           required: false
         - in: query
-          name: orderBy
+          name: order_by
           schema:
             type: string
             default: "createdAt"
@@ -831,6 +841,43 @@ components:
         - first_name
         - email
         - password
+
+    IntrospectRequestV1:
+      type: object
+      properties:
+        access_token:
+          type: string
+          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c"
+      required:
+        - access_token
+
+    IntrospectResponseV1:
+      type: object
+      properties:
+        active:
+          type: boolean
+          example: true
+        username:
+          type: string
+          example: "email@kt.com"
+        exp:
+          type: integer
+          format: int64
+          example: 1672531199000
+        sub:
+          type: string
+          example: "01E5ZQZQZQZQZQZQZQZQZQZQZ"
+        roles:
+          type: array
+          items:
+            type: string
+            example: "ROLE_ADMIN"
+      required:
+        - active
+        - username
+        - exp
+        - sub
+        - roles
 
     IdsRequestV1:
       type: object
